--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -161,28 +161,31 @@ p {
 
 #AboutMe .description .switching_content{
     border-radius: 25px;
-    height: 400px;
-    weigth: 400px;
+    min-height: 800px;
+    min-width: 800px;
     border: 2px solid #73AD21;
     position: relative;
     background: yellow;
 }
 
-#AboutMe .description .switching_content .left_text{
+#AboutMe .description .switching_content #left_text{
     margin: 5% 1% 5% 1%;
 }
 
-#AboutMe .description .switching_content .right_graph{
+#AboutMe .description .switching_content #right_graph{
     position: absolute;
     height: 80px;
     width: 80px;
     top:0px;
     right:10px;
     background: black;
+    overflow: hidden;
 }
 
-#AboutMe .description .switching_content .right_graph img{
-   height: 100%;
+#AboutMe .description .switching_content #right_graph img{
+    min-width: 750px;
+    float: right;
+
 }
 
 #AboutMe .description p{
