--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -159,6 +159,10 @@ p {
     text-align: left;
 }
 
+#AboutMe .description h4{
+    margin-bottom: 2%;
+}
+
 #AboutMe .description .showing_button{
     min-width: 120px;
     min-height: 50px;
@@ -174,13 +178,31 @@ p {
 
 #AboutMe .description .showing_button #text_button {
     float: right;
+    height: 25px;
 }
 
 #AboutMe .description .switching_content{
     min-height: 300px;
     min-width: 800px;
     position: relative;
-    padding: 3% 1% 3% 1%;
+    padding: 0% 1% 3% 1%;
+}
+
+
+#AboutMe .description .switching_content #left_text {
+    overflow: auto;
+    height: auto;
+}
+
+
+#AboutMe .description .switching_content #left_text img{
+    align: right;
+    margin: 0 2% 0 2%;
+}
+
+#AboutMe .description .switching_content #left_text p{
+    margin: 1% 0% 2% 0%;
+    line-height: 2.0;
 }
 
 #AboutMe .description .switching_content #divider{
