--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -43,6 +43,13 @@ p {
    margin: 0px auto;
 }
 
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .hidden {
     display: none !important;
 }
@@ -58,7 +65,7 @@ p {
 #Welcome, #Welcome2{
     background: url('../imgs/me_and_bike_HDR_reduced_pasteu_6b.jpg') center no-repeat;
     background-size: cover;
-    min-height: 100%;
+    min-height: calc(100% - 32px);
 }
 
 #Welcome .welcome_text{
@@ -75,110 +82,21 @@ p {
 ==================================================================================*/
 #Experience{
     background: none;
+    min-height: 100%;
 }
 
-#Experience .w3-container .box_container{
 
-    background: green;
-}
-
-#Experience .w3-container .box_container .infobox{
-    max-width: 30%;
-    width: 250px;
-    margin: 5% 9% 5% 9%;
-    background: #cccccc;
+#Experience .half_page{
+    position: relative;
     display: inline-block;
-    position: relative;
-    border-radius: 5px;
+    vertical-align: top;
+    width: 48%;
+    margin: 0% 0% 0% 1%;
+    padding: 2%;
     border: 1px dashed;
-    --inside-box-dim:  40%;
-    --inside-box-dim_2: 5%;
-    overflow: hidden;
 }
 
-
-#Experience .w3-container .box_container .infobox:before{
-    content: "";
-    display: block;
-    padding-top: 100%; 	/* initial ratio of 1:1*/
-}
-
-#Experience .w3-container .box_container .infobox .inside_box {
-    width: 80%;
-    height: 80%;
-    position: absolute;
-    top:0;
-    left: 0;
-    margin: 10%;
-    border: 1px solid;
-    border-radius: 5px;
-}
-
-#Experience .w3-container .box_container .infobox .topbar_inside_box {
-    left: calc(50% - var(--inside-box-dim)/2);
-    top: calc(-1*(var(--inside-box-dim_2)/2));
-    width: var(--inside-box-dim);
-    height: var(--inside-box-dim_2);
-    background: #cccccc;
-    position: absolute;
-}
-
-#Experience .w3-container .box_container .infobox .leftbar_inside_box {
-    left: calc(-1*(var(--inside-box-dim_2)/2));
-    top: calc(50% - var(--inside-box-dim)/2);
-    width: var(--inside-box-dim_2);
-    height: var(--inside-box-dim);
-    background: #cccccc;
-    position: absolute;
-}
-
-#Experience .w3-container .box_container .infobox .rightbar_inside_box {
-    left: calc(100% - var(--inside-box-dim_2)/2);
-    top: calc(50% - var(--inside-box-dim)/2);
-    width: var(--inside-box-dim_2);
-    height: var(--inside-box-dim);
-    background: #cccccc;
-    position: absolute;
-}
-
-#Experience .w3-container .box_container .infobox .bottombar_inside_box {
-    top: calc(100% - var(--inside-box-dim_2)/2);
-    left: calc(50% - var(--inside-box-dim)/2);
-    width: var(--inside-box-dim);
-    height: var(--inside-box-dim_2);
-    background: #cccccc;
-    position: absolute;
-}
-
-
-#Experience .w3-container .box_container .infobox .cross {
-    background: red; height: 50%; position: absolute;
-    width: 10%; left: 45%; top: 25%; z-index: auto;
-}
-#Experience .w3-container .box_container .infobox .cross:after {
-    background: red; content: ""; height: 20%; left: -200%; top: 40%; width: 500%;
-    position: absolute;
-}
-
-#Experience .w3-container .box_container .infobox .image_icon {
-    position: relative;
-    height: 100%;
-    width: 100%;
-
-}
-
-#Experience .w3-container .box_container .infobox .image_icon img{
-    max-width: 80%;
-    max-height: 70%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#Experience .w3-container .box_container .infobox .image_icon img:hover{
-    max-width:  115%;
-    max-height: 115%;
+#Experience .intro_text {
 }
 
 #Experience .show_images{
@@ -349,7 +267,9 @@ p {
 ===================================================================================
 ============================== CONTACT SECTION ====================================
 =================================================================================*/
-
+#Contact {
+    min-height: calc(100% - 150px);
+}
 
 #Contact .w3-container{
     margin-left: 10%;
