--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -270,8 +270,7 @@ p {
 }
 
 
-/*
-===================================================================================
+/*=================================================================================
 ============================== CONTACT SECTION ====================================
 =================================================================================*/
 #Contact {
@@ -298,6 +297,21 @@ p {
 #Contact .fa-paper-plane{
     color: #52733B;
 }
+
+#Contact .block_comm {
+    background-color: black;
+    opacity: 0.7;
+    height: 40%;
+    width: 50%;
+    position: absolute;
+    display: none;
+}
+
+
+
+/*=================================================================================
+============================== FOOTER SECTION ====================================
+=================================================================================*/
 
 footer{
     --footer-size: 250px;
