Fixed minor bugs. In line with 34f101a8aaa294998d8a8042b62d412c44b11fd7 backend version

--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -310,6 +310,14 @@ p {
     display: none;
 }
 
+#Contact .error_com {
+  cursor: default;
+}
+
+#Contact .error_com:hover {
+  background-color: gainsboro !important;
+}
+
 #Contact .message_conf{
   background-color: #52733B;
   cursor: default;
