--- a/css/responsive_code.css
+++ b/css/responsive_code.css
@@ -1,6 +1,46 @@
 /* personal_website.css Jul 2017 by Marcos Bernal */
 @CHARSET "ISO-8859-1";
 
+@media only screen and (max-width: 900px) {
+
+  #AboutMe .description .showing_button {
+    display: none;
+  }
+
+  #AboutMe .description .switching_content{
+    min-width: 0;
+    width: 100%;
+    height: auto;
+  }
+
+  #AboutMe .description .switching_content #left_text{
+    position: relative;
+    display: block;
+    width: 100%;
+  }
+
+  #AboutMe .description .switching_content #divider{
+    display: none;
+  }
+
+  #AboutMe .description .switching_content #right_graph{
+    position: relative !important;
+    width: 100% !important;
+    top:auto !important;
+    min-width: 0 !important;
+    height: auto !important;
+  }
+
+  #AboutMe .description .switching_content #right_graph #mynetwork{
+    position: relative !important;
+    width: 100% !important;
+    min-width: 0 !important;
+    margin: 0 !important;
+          height: auto !important;
+  }
+
+}
+
 @media screen and (max-width: 600px) {
 
     .menu{
@@ -82,4 +122,10 @@
         margin-bottom: 5%;
     }
 
+}
+
+@media only screen and (max-width: 400px) {
+    #AboutMe .description .switching_content #right_graph{
+    display: none;
+    }
 }
