--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -52,8 +52,17 @@ p {
 }
 
 .hidden {
-    display: none !important;
+    display: none;
 }
+
+.show {
+    display:block !important;
+}
+
+/*==================================================================================
+============================== NAVBAR MENU =========================================
+==================================================================================*/
+
 
 .w3-black .w3-bar {
     background-color: black; /*rgb(62, 71, 79);*/
@@ -68,22 +77,92 @@ p {
     background-color: #494949;
 }
 
+.responsive_menu {
+   position: fixed;
+   top: 30px;
+   left: calc(100% - 80px);
+   width: auto;
+   outline: none;
+   z-index: 1060 !important;
+ }
+
+ .responsive_menu .dropdown_button {
+    background: url("../imgs/menu_collapse_black.png") no-repeat center;
+    background-position: 50% 50%;
+    background-color: none;
+
+    width: 50px;
+    height: 50px;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border-radius: 30%;
+    border: 2px solid black;
+    cursor: pointer;
+    outline: none;
+}
+
+.responsive_menu .dropdown_button.alt {
+    -ms-transform:rotate(90deg);
+    -webkit-transform:rotate(90deg);
+    -moz-transform:rotate(90deg);
+    -o-transform:rotate(90deg);
+    transition-duration:0.2s ;
+}
+
+.responsive_menu .dropdown_button:hover {
+    background-color: rgba(255,255,255, 0.4);
+}
+
+.dropdown_button-content {
+    display: none;
+    position: absolute;
+    left:auto;
+    right:0;
+    text-align: center;
+    background-color: black;/* #f9f9f9; */
+    opacity: 0.8;
+    color: white;
+    min-width: 120px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown_button-content a {
+    color: white;
+    padding: 8px 12px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown_button-content a:hover {
+    background-color: #B2B2B2
+}
+
 
 /*==================================================================================
 ============================== WELCOME SECTION =====================================
 ==================================================================================*/
-#Welcome, #Welcome2{
-    background: url('../imgs/me_and_bike_HDR_reduced_pasteu_6b.jpg') center no-repeat;
+#Welcome {
+    background: url('../imgs/me_and_bike_HDR_reduced_pasteu_6b.jpg') no-repeat;
     background-size: cover;
     min-height: calc(100% - 32px);
 }
 
 #Welcome .welcome_text{
     background-color: black;/*rgb(62, 71, 79) !important;*/
-    padding: 2%;
     margin-left: 5%;
+    width: 40%;
     margin-right: 5%;
     height: 100%;
+}
+
+#Welcome .welcome_text .text_centered {
+  margin: auto;
+}
+
+#Welcome .welcome_text .text_centered h5 {
+  margin: 10px 10px 30px 10px;
 }
 
 
@@ -224,6 +303,7 @@ p {
 #AboutMe .description .switching_content #left_text {
     overflow: auto;
     height: auto;
+    z-index: 1 !important;
 }
 
 #AboutMe .description .switching_content #left_text img{
@@ -250,6 +330,7 @@ p {
     right:10px;
     background: black;
     overflow: hidden;
+    z-index: 1 !important;
 }
 
 #AboutMe .description .switching_content #right_graph #mynetwork{
@@ -258,6 +339,7 @@ p {
     border: 1px solid lightgray;
     float: right;
     background: whitesmoke;
+    z-index: -1 !important;
 
 }
 
@@ -266,6 +348,11 @@ p {
     text-align: justify;
     margin: 1% 0% 2% 0%;
     line-height: 175%;
+    z-index: -1 !important;
+}
+
+.description{
+    z-index: -1 !important;
 }
 /*
 #AboutMe .carousel-inner .item .car_container{
@@ -340,6 +427,9 @@ p {
   border: 1px solid red !important;
 }
 
+#Contact textarea {
+  margin-top: 10px;
+}
 
 
 /*=================================================================================
@@ -378,7 +468,6 @@ footer .license p{
 #welcome_menu {
     position:absolute;
     width:100%;
-    z-index:1;
     top:0;
 }
 
@@ -387,7 +476,6 @@ footer .license p{
     top: 0;
     left:0;
     height: 40px;
-    z-index: 70;
     width: 100%;
     padding: 0;
     margin:0;
