Fixed errors according the w3 compliance test https://validator.w3.org/

--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -312,6 +312,15 @@ p {
     max-width: 25%;
 }
 
+#AboutMe .description .switching_content #left_text #about_in_hockey{
+    float: left;
+}
+
+
+#AboutMe .description .switching_content #left_text #about_in_hce{
+    float: right;
+}
+
 #AboutMe .description .switching_content #divider{
     position: absolute;
     width: 10px;
