Improved multilingual version. Added cookies for language control. Script improvement and additional_content translation remain to be done

--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -454,6 +454,13 @@ p {
   margin-top: 10px;
 }
 
+#Contact .msg_conf_text {
+  display: none;
+  border: 1px solid green;
+  width: 100%;
+  padding: 4%;
+}
+
 
 /*=================================================================================
 ============================== FOOTER SECTION ====================================
