--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -423,18 +423,13 @@ p {
 #Contact .block_comm {
     background-color: black;
     opacity: 0.7;
-    height: 40%;
-    width: 50%;
     position: absolute;
-    display: none;
+    display: block;
 }
 
-#Contact .error_com {
+#Contact .error_text {
   cursor: default;
-}
-
-#Contact .error_com:hover {
-  background-color: gainsboro !important;
+  outline: none;
 }
 
 #Contact .message_conf{
