--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -77,39 +77,17 @@ p {
     background: grey;
 }
 
-.responsive_menu {
-   position: fixed;
-   top: 30px;
-   left: calc(100% - 80px);
-   width: auto;
-   outline: none;
-   z-index: 1060 !important;
- }
 
- .responsive_menu .dropdown_button {
-    background: url("../imgs/menu_collapse_black.png") no-repeat center;
-    background-position: 50% 50%;
-    background-color: none;
-
+.dropdown_button {
+    background: url("../imgs/menu_collapse_white.png") no-repeat;
     width: 50px;
     height: 50px;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border-radius: 30%;
-    border: 2px solid black;
+    border: none;
     cursor: pointer;
     outline: none;
-
-    -webkit-tap-highlight-color:  transparent;
-    -moz-highlight-color: transparent;
-    -ms-highlight-color: transparent;
-    -o-tap-highlight-color: transparent;
-    tap-highlight-color: transparent;
-
 }
 
-.responsive_menu .dropdown_button.alt {
+.dropdown_button.alt {
     -ms-transform:rotate(90deg);
     -webkit-transform:rotate(90deg);
     -moz-transform:rotate(90deg);
@@ -117,7 +95,7 @@ p {
     transition-duration:0.2s ;
 }
 
-.responsive_menu .dropdown_button:hover {
+.dropdown_button:hover {
     background-color: rgba(255,255,255, 0.4);
 }
 
@@ -125,7 +103,6 @@ p {
     display: none;
     position: absolute;
     left:auto;
-    right:0;
     background-color: black;/* #f9f9f9; */
     opacity: 0.8;
     color: white;
@@ -143,6 +120,10 @@ p {
 
 .dropdown_button-content a:hover {
     background-color: #B2B2B2
+}
+
+#nav_menu .aux_black_bar{
+  display:none;
 }
 
 
