Added img of menu collapse. Fixed view width bug in mobile and version number

--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -177,7 +177,7 @@ p {
   width: 100%;
   text-align: center;
   opacity: 0.4;
-  margin-bottom: 20px
+  margin-bottom: 40px;
 }
 
 #Welcome #version_overview {
