--- a/css/personal_website.css
+++ b/css/personal_website.css
@@ -275,20 +275,6 @@ p {
     min-height: 100%;
 }
 
-/* color 1: #E4EBF2;
-#52733B;
-#84A45A;
-#818A6F;
-#715E4E;
-*/
-
-/* color 1: #ABA6BF;
-#595775;
-#583E2E;
-#F1E0D6;
-#BF988F;
-*/
-
 #AboutMe .description{
     padding: 0% 8% 5% 8%;
     text-align: left;
@@ -304,16 +290,25 @@ p {
     padding: 0% 3% 0% 3%;
 }
 
-#AboutMe .description .showing_button img:hover{
+#AboutMe .description .showing_button .transformation-button {
+    background-color: #d2d2d1;
+    color: black;
+    margin: 1px;
+}
+
+#AboutMe .description .showing_button .transformation-button:hover{
     background: #cdcdcd;
     border: 1px solid #cdcdcd;
     border-radius: 4px;
     cursor:pointer;
+    box-shadow: 0px 0px 4px 3px grey;
 }
 
 #AboutMe .description .showing_button #text_button {
     float: right;
-    height: 25px;
+    font-size: 32px;
+    line-height: 100%;
+    padding: 0px 3px 3px 3px;
 }
 
 #AboutMe .description .switching_content{
@@ -329,6 +324,8 @@ p {
     height: auto;
     z-index: 1 !important;
 }
+
+
 
 #AboutMe .description .switching_content #left_text img{
     align: right;
@@ -355,6 +352,7 @@ p {
 #AboutMe .description .switching_content #divider:hover{
     background: #283717;
     cursor:pointer;
+    box-shadow: 0px 0px 4px 3px grey;
 }
 
 #AboutMe .description .switching_content #right_graph{
@@ -394,17 +392,7 @@ p {
 .description{
     z-index: -1 !important;
 }
-/*
-#AboutMe .carousel-inner .item .car_container{
-  width: 80%;
-  height: 40%;
-}
 
-#AboutMe .carousel-inner {
-  background: black !important;
-  z-index: -1 !important;
-}
-*/
 
 /*=================================================================================
 ============================== CONTACT SECTION ====================================
